secondfile/objects/Release_Configuration__c.object
<CustomObject>
    <description>Collab</description>
    <fields>
        <fullName>BID_Dev__c</fullName>
        <label>BID Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_ST__c</fullName>
        <label>BID ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_UAT__c</fullName>
        <label>BID UAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birch_Dev__c</fullName>
        <label>Birch Dev</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Birch_ST__c</fullName>
        <label>Birch ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Birch_UAT__c</fullName>
        <label>Birch UAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CI_Dev__c</fullName>
        <label>Cast Iron Dev</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CI_ST__c</fullName>
        <label>Cast Iron ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CI_UAT__c</fullName>
        <label>Cast Iron UAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSI_Dev__c</fullName>
        <label>CSI Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_ST__c</fullName>
        <label>CSI ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_UAT__c</fullName>
        <label>CSI UAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Dev__c</fullName>
        <label>CSP Dev</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSP_ST__c</fullName>
        <label>CSP ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSP_UAT__c</fullName>
        <label>CSP UAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Dev__c</fullName>
        <label>DocuSign Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_ST__c</fullName>
        <label>DocuSign ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_UAT__c</fullName>
        <label>DocuSign UAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBM_ROME_SFDC_Mulit_Dev__c</fullName>
        <label>ROME DEV</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EBM_ROME_SFDC_Mulit_ST__c</fullName>
        <label>ROME ST</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EBM_ROME_SFDC_Mulit_UAT__c</fullName>
        <label>ROME UAT</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MuleSoft_Dev__c</fullName>
        <label>MuleSoft Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MuleSoft_ST__c</fullName>
        <label>MuleSoft ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MuleSoft_UAT__c</fullName>
        <label>MuleSoft UAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetExam_Dev__c</fullName>
        <label>NetExam Dev</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NetExam_ST__c</fullName>
        <label>NetExam ST</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NetExam_UAT__c</fullName>
        <label>NetExam UAT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PID__c</fullName>
        <label>PID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMT__c</fullName>
        <label>PMT</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Dev__c</fullName>
        <label>SFDC Dev</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ST__c</fullName>
        <label>SFDC ST</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_UAT__c</fullName>
        <label>SFDC UAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Release Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>